layout bugs

--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -102,7 +102,8 @@
 }
 
 .suggestion-result-icons{
-	width:99%;
+	width:100%;
+	min-width:320px;
 	margin:0 auto;
 	padding-left:6px;
 }
@@ -113,9 +114,9 @@
 	width:155px;
 	height:140px;
 	cursor:pointer;
-	margin:11px;
+	margin-left:10px;
 	margin-top:0px;
-	margin-right:0px;
+	margin-bottom:10px;
 }
 
 .suggestion-icon-body{
