--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -208,12 +208,17 @@
 
 .details-left{
 	float:left;
+	width:100%;
+	max-width:380px;
+	padding-left:20px;
+	padding-right:20px;
 }
 
+/**
 .details-left-collections{
 	min-width:300px;
 	margin-bottom:20px;
-}
+}*/
 
 .details-left-collections ul{
 	list-style-type:none;
@@ -339,20 +344,16 @@ textarea {
 .details-left h3{
 	color:#6A5ACD;
 	border-bottom:2px black solid;
-	width:300px;
+	width:100%;
+	max-width:360px;
 }
 
 .left-info-box{
-	width:300px;
-	padding:10px;
-	margin-bottom:20px;
 	min-width:300px;
-	margin-right:10px;
+	margin-bottom:30px;
 }
 
-.left-info-box th{
-	width:100px;
-}
+
 
 .details-left p{
 	color:black;
@@ -362,11 +363,16 @@ textarea {
 .details-right{
 	margin-left:0px;
 	float:left;
-	width:75%;
-	min-width:300px;
+	width:100%;
+	min-width:72%;
+	max-width:750px;
 	padding:0px;
 	margin-left:0px;
+	padding-right:20px;
+	padding-left:20px;
 }
+
+
 
 .details-right h1{
 	background:#6A5ACD; 
@@ -377,7 +383,7 @@ textarea {
 }
 
 .profile-photo-details{
-	width:300px;
+	width:100%;
 	height:320px;
 	border:2px solid lightgrey;
 }
